--- a/python_version/debug_projection.ipynb
+++ b/python_version/debug_projection.ipynb
@@ -16,6 +16,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def getw_rho(wplus,wminus,phiA,phiB,rho):\n",
+    "    wplus = wplus\n",
+    "    wminus = wminus\n",
+    "    wA = (wplus+wminus)/2\n",
+    "    wB = (wplus-wminus)/2\n",
+    "    rhoA = rho(wA,phiA)\n",
+    "    rhoB = rho(wB,phiB)\n",
+    "    return rhoA,rhoB\n",
+    "\n",
+    "\n",
     "class model():\n",
     "    def __init__(self,chi,rho0,ensemble = 'canonical'):\n",
     "        self.chi = chi\n",
@@ -39,30 +49,25 @@
     "    def dHdw_compressible(self,w):\n",
     "        wplus = w[:,0]\n",
     "        wminus = w[:,1]\n",
-    "        wA = (wplus+wminus)/2\n",
-    "        wB = (wplus-wminus)/2\n",
-    "        rhoA = self.rho(wA,self.phiA)\n",
-    "        rhoB = self.rho(wB,self.phiB)\n",
+    "        rhoA,rhoB = getw_rho(wplus,wminus,self.phiA,self.phiB,self.rho)\n",
     "        dHdwplus = (rhoA+rhoB)-2/self.chi*wplus\n",
     "        dHdwminus = (rhoB-rhoA)+2/self.chi*wminus\n",
     "        return self.rho0*np.vstack((dHdwplus,-dHdwminus)).T\n",
     "    def dHdw_weakcompressible(self,w):\n",
     "        wplus = w[:,0]\n",
     "        wminus = w[:,1]\n",
-    "        wA = (wplus+wminus)/2\n",
-    "        wB = (wplus-wminus)/2\n",
-    "        rhoA = self.rho(wA,self.phiA)\n",
-    "        rhoB = self.rho(wB,self.phiB)\n",
+    "        wplus = w[:,0]\n",
+    "        wminus = w[:,1]\n",
+    "        rhoA,rhoB = getw_rho(wplus,wminus,self.phiA,self.phiB,self.rho)\n",
     "        dHdwplus = (rhoA+rhoB)-2/(self.chi+2*self.zeta)*(wplus-self.zeta)\n",
     "        dHdwminus = (rhoB-rhoA)+2/self.chi*wminus\n",
     "        return self.rho0*np.vstack((dHdwplus,-dHdwminus)).T\n",
     "    def dHdw_incompressible(self,w):\n",
     "        wplus = w[:,0]\n",
     "        wminus = w[:,1]\n",
-    "        wA = (wplus+wminus)/2\n",
-    "        wB = (wplus-wminus)/2\n",
-    "        rhoA = self.rho(wA,self.phiA)\n",
-    "        rhoB = self.rho(wB,self.phiB)\n",
+    "        wplus = w[:,0]\n",
+    "        wminus = w[:,1]\n",
+    "        rhoA,rhoB = getw_rho(wplus,wminus,self.phiA,self.phiB,self.rho)\n",
     "        dHdwplus = (rhoA+rhoB)-1\n",
     "        dHdwminus = (rhoB-rhoA)+2/self.chi*wminus\n",
     "        return self.rho0*np.vstack((dHdwplus,-dHdwminus)).T\n",
@@ -73,46 +78,68 @@
     "            w = w.reshape((1,2))\n",
     "        wplus = w[:,0]\n",
     "        wminus = w[:,1]\n",
-    "        wA = (wplus+wminus)/2\n",
-    "        wB = (wplus-wminus)/2\n",
-    "        rhoA = self.rho(wA,self.phiA)\n",
-    "        rhoB = self.rho(wB,self.phiB)\n",
+    "        rhoA,rhoB = getw_rho(wplus,wminus,self.phiA,self.phiB,self.rho)\n",
     "        g = self.rho0*(rhoA+rhoB-1)\n",
-    "        return (np.vstack((g,g)).T)\n",
+    "        return g\n",
     "    def dgdw(self,w):\n",
     "        wplus = w[:,0]\n",
     "        wminus = w[:,1]\n",
-    "        wA = (wplus+wminus)/2\n",
-    "        wB = (wplus-wminus)/2\n",
+    "        rhoA,rhoB = getw_rho(wplus,wminus,self.phiA,self.phiB,self.rho)\n",
     "        if self.ensemble == 'grand':\n",
-    "            rhoA = self.rho(wA,self.phiA)\n",
-    "            rhoB = self.rho(wB,self.phiB)\n",
     "            dgdwplus = -(rhoA+rhoB)\n",
     "            dgdwminus = -(rhoB-rhoA)\n",
-    "            g = self.rho0*(rhoA+rhoB-1)\n",
-    "\n",
-    "            #there might be a sign here?\n",
-    "            return np.vstack((-dgdwplus,dgdwminus,g)).T\n",
+    "            return np.vstack((dgdwplus,dgdwminus)).T\n",
     "    def getDensity(self,w):\n",
     "        return self.rho0*calc_density(w,self.rho,self.phiA,self.phiB)\n",
     "    def getCorrelation(self,w):\n",
     "        return self.rho0*calcDensity2(w,self.rho,self.phiA,self.phiB)\n",
     "    def getCorrelation_list(self,wlist):\n",
     "        return np.array([self.rho0*calcDensity2(w,self.rho,self.phiA,self.phiB) for w in wlist],dtype = complex)    \n",
-    "    \n"
+    "\n",
+    "    def dgldl(self,w,l):\n",
+    "        wplus = w[:,0]\n",
+    "        wminus = w[:,1]\n",
+    "        rhoA,rhoB = getw_rho(wplus,wminus,self.phiA,self.phiB,self.rho)\n",
+    "        rho_plus = rhoA+rhoB\n",
+    "        rho_minus = rhoB-rhoA\n",
+    "        wnew = w.copy()\n",
+    "        wnew[:,0] += l*self.dgdw(w)[:,0]\n",
+    "        wnew[:,1] += l*self.dgdw(w)[:,1]\n",
+    "\n",
+    "        if self.ensemble == 'grand':\n",
+    "            wplus_c = wnew[:,0]\n",
+    "            wminus_c = wnew[:,1]\n",
+    "            rhoA_adjust,rhoB_adjust = getw_rho(wplus_c,wminus_c,self.phiA,self.phiB,self.rho)\n",
+    "            dgdl = rhoA_adjust*(rho_plus-rho_minus)+rhoB_adjust*(rho_plus+rho_minus)\n",
+    "            dgdl *= self.rho0*0.25\n",
+    "            return dgdl\n",
+    "    def gl(self,w,l):\n",
+    "        wnew = w.copy()\n",
+    "        wnew[:,0] += l*self.dgdw(w)[:,0]\n",
+    "        wnew[:,1] += l*self.dgdw(w)[:,1]\n",
+    "\n",
+    "\n",
+    "        return self.g(wnew)\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1964.94181765-2.31511253j -131.94682136+0.15336614j\n",
-      "  1963.94181765-2.31511253j]]\n"
+      "48\n",
+      "8.837107320979886e-06\n",
+      "[ 2.22044605e-16-2.13875819e-19j -1.11022302e-16+4.94839295e-19j\n",
+      "  2.22044605e-16-2.44114895e-18j  6.66133815e-16+3.89635156e-20j\n",
+      " -1.11022302e-16-1.73811161e-18j  5.56669763e-04+7.51563199e-06j\n",
+      "  7.18685047e-03+2.20619724e-04j  1.81854531e-13-1.70891930e-15j\n",
+      "  3.56233519e-04+3.53800226e-06j  1.63659941e-08-1.77642655e-11j]\n"
      ]
     }
    ],
@@ -126,7 +153,7 @@
     "phiB = 1-phiA\n",
     "chi = 1.0\n",
     "rho0 = 1.0\n",
-    "nx = 1\n",
+    "nx = 10\n",
     "zA = 1e3\n",
     "zB = 1e3\n",
     "tmax = 10\n",
@@ -154,18 +181,27 @@
     "\n",
     "error = 1\n",
     "tol= 1e-4\n",
-    "lag_mult = np.zeros(nx,dtype = complex)\n",
+    "lag_mult = np.ones(nx,dtype = complex)*0.01\n",
     "w0 = w[-1]\n",
-    "dgdw = \n",
+    "\n",
+    "def F(w,wfix,lag_mult,_model):\n",
+    "    return w-wfix-lag_mult*_model.dgdw(wfix)\n",
+    "\n",
+    "itter=0\n",
+    "error = 1\n",
+    "tol = 1e-5\n",
+    "lag_mult_old = lag_mult.copy()\n",
     "while error > tol:\n",
-    "    #calculate \n",
-    "    F = w0-wpast-lag_mult*\n",
-    "    dgdw = _model.dgdw(w0)\n",
-    "    print(dgdw)\n",
-    "    break\n",
-    "\n",
-    "\n",
-    "\n",
+    "    lag_mult+= -(_model.gl(w0,lag_mult))/_model.dgldl(w0,lag_mult)\n",
+    "    \n",
+    "    error = np.sqrt(np.sum(np.square(lag_mult.real-lag_mult_old.real)+np.square(lag_mult.imag-lag_mult_old.imag)))\n",
+    "    lag_mult_old = lag_mult.copy()\n",
+    "    itter+=1\n",
+    "    if itter == 1000:\n",
+    "        break\n",
+    "print(itter)\n",
+    "print(error)\n",
+    "print(_model.gl(w0,lag_mult))\n",
     "corrlist.append(_model.getCorrelation_list(w))\n",
     "\n",
     "# sde = sde_int(w0,_model.dHdw_incompressible,_model.wick)\n",
