--- a/python_version/debug_projection.ipynb
+++ b/python_version/debug_projection.ipynb
@@ -7,350 +7,41 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "# from model_2point import *\n"
+    "from model_2point import *\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def LSolver(w0,lag_mult,gl,dgldl,tol = 1e-5,maxiter = 10000,maxupdate = 1000,verbose = False):\n",
-    "    error = 1\n",
-    "    itter=0\n",
-    "\n",
-    "    while error > tol:\n",
-    "        update= (gl(w0,lag_mult))/dgldl(w0,lag_mult)\n",
-    "        # actually we can apply this logic locally to each element of the update\n",
-    "        loc  = np.where(np.abs(update)>maxupdate)\n",
-    "        if len(loc)>0:\n",
-    "           update[loc] = update[loc]/np.abs(update[loc])*maxupdate\n",
-    "            # update[loc] = (gl(w0,lag_mult))\n",
-    "        if verbose:\n",
-    "            print(np.max(np.abs(update)))\n",
-    "        lag_mult+= -(update)\n",
-    "        #use Linf nnorm\n",
-    "        error = np.max(np.abs(gl(w0,lag_mult).real))\n",
-    "        error2 = np.max(np.abs(gl(w0,lag_mult).imag))\n",
-    "        if error2>error:\n",
-    "            error = error2\n",
-    "        itter+=1\n",
-    "        if itter == maxiter:\n",
-    "            break\n",
-    "    if verbose:\n",
-    "        return lag_mult,error,itter\n",
-    "    return lag_mult\n",
-    "\n",
-    "\n",
-    "def getw_rho(wplus,wminus,phiA,phiB,rho):\n",
-    "    wplus = wplus\n",
-    "    wminus = wminus\n",
-    "    wA = (wplus+wminus)/2\n",
-    "    wB = (wplus-wminus)/2\n",
-    "    rhoA = rho(wA,phiA)\n",
-    "    rhoB = rho(wB,phiB)\n",
-    "    return rhoA,rhoB\n",
-    "\n",
-    "\n",
-    "\n",
-    "class sde_int():\n",
-    "    def __init__(self,x0,F,g):\n",
-    "        self.x0 = x0\n",
-    "        self.F = F\n",
-    "        self.g = g\n",
-    "    def initialize_project(self,dgdw,gl,dgldl,tol,maxiter,maxupdate):\n",
-    "        self.dgdw = dgdw\n",
-    "        self.gl = gl\n",
-    "        self.dgldl = dgldl\n",
-    "        self.tol = tol\n",
-    "        self.maxiter = maxiter\n",
-    "        self.maxupdate = maxupdate\n",
-    "    def Euler_Maruyama(self,tmax,delta_t,lambda_t,SCFT = False):\n",
-    "        x = []\n",
-    "        tlist = []\n",
-    "        shape_array = np.shape(self.x0)\n",
-    "        x.append(self.x0)\n",
-    "        tlist.append(0)\n",
-    "        t = 0\n",
-    "        while t < tmax:\n",
-    "            dt_eff = delta_t*lambda_t\n",
-    "            xtemp = x[-1] + self.F(x[-1])*dt_eff \n",
-    "            if not SCFT:\n",
-    "                noise = np.vstack((np.random.normal(0,1,shape_array[0]),np.random.normal(0,1,shape_array[0]))).T\n",
-    "                xtemp += self.g(x[-1])*np.sqrt(2*dt_eff)*noise\n",
-    "            if np.any(np.isnan(xtemp)):\n",
-    "                print('nan')\n",
-    "                break\n",
-    "            x.append(xtemp)\n",
-    "            t += delta_t\n",
-    "            tlist.append(t)\n",
-    "        return x,tlist\n",
-    "    def Euler_Maruyama_Projected(self,tmax,delta_t,lambda_t,SCFT = False):\n",
-    "        x = []\n",
-    "        tlist = []\n",
-    "        shape_array = np.shape(self.x0)\n",
-    "        x.append(self.x0)\n",
-    "        tlist.append(0)\n",
-    "        t = 0\n",
-    "        while t < tmax:\n",
-    "            dt_eff = delta_t*lambda_t\n",
-    "            xtemp_i = x[-1] + self.F(x[-1])*dt_eff \n",
-    "            if not SCFT:\n",
-    "                noise = np.vstack((np.random.normal(0,1,shape_array[0]),np.random.normal(0,1,shape_array[0]))).T\n",
-    "                xtemp_i += self.g(x[-1])*np.sqrt(2*dt_eff)*noise\n",
-    "            xtemp = xtemp_i.copy()\n",
-    "            lag_mult = np.zeros(len(xtemp),dtype = complex)\n",
-    "            lag_mult = LSolver(xtemp,lag_mult,self.gl,self.dgldl,self.tol,self.maxiter,self.maxupdate)\n",
-    "            # dgdl \n",
-    "\n",
-    "            xtemp[:,0]+=lag_mult*self.dgdw(xtemp)[:,0]\n",
-    "            xtemp[:,1]+=lag_mult*self.dgdw(xtemp)[:,1]\n",
-    "\n",
-    "            if np.any(np.isnan(xtemp)):\n",
-    "                print('nan')\n",
-    "                break\n",
-    "\n",
-    "            x.append(xtemp)\n",
-    "            t += delta_t\n",
-    "            tlist.append(t)\n",
-    "        return x,tlist\n",
-    "\n",
-    "def Q(w):\n",
-    "    return np.sum(np.exp(-w))/len(w)\n",
-    "def rhoc(w,phi):\n",
-    "    _Q = Q(w)\n",
-    "    return phi/_Q*np.exp(-w)\n",
-    "def rhog(w,z):\n",
-    "    return z*np.exp(-w)\n",
-    "\n",
-    "def calc_density(w,rho,phiA,phiB):\n",
-    "    wplus = w[:,0]\n",
-    "    wminus = w[:,1]\n",
-    "    wA = (wplus+wminus)/2\n",
-    "    wB = (wplus-wminus)/2\n",
-    "    rhoA = rho(wA,phiA)\n",
-    "    rhoB = rho(wB,phiB)\n",
-    "    return np.vstack((rhoA,rhoB)).T\n",
-    "\n",
-    "def calcDensity2(w,rho,phiA,phiB):\n",
-    "    rho = calc_density(w,rho,phiA,phiB)\n",
-    "    rhoA = rho[:,0]-phiA\n",
-    "    rhoB = rho[:,1]-phiB\n",
-    "    correlation_array = np.zeros((2,2), dtype=complex)\n",
-    "    correlation_array[0,0] = np.mean(rhoA*rhoA)-np.mean(rhoA)**2\n",
-    "    correlation_array[1,1] = np.mean(rhoB*rhoB)-np.mean(rhoB)**2\n",
-    "    correlation_array[0,1] = np.mean(rhoA*rhoB)-np.mean(rhoA)*np.mean(rhoB)\n",
-    "    correlation_array[1,0] = correlation_array[0,1]\n",
-    "    return correlation_array\n",
-    "\n",
-    "#def calc_isothermal_compressible(w,chi,rho0,phiA,phiB):\n",
-    "\n",
-    "class model():\n",
-    "    def __init__(self,chi,rho0,ensemble = 'canonical'):\n",
-    "        self.chi = chi\n",
-    "        self.rho0 = rho0\n",
-    "        \n",
-    "        if ensemble == 'canonical':\n",
-    "            self.rho = rhoc\n",
-    "        elif ensemble == 'grand':\n",
-    "            self.rho = rhog\n",
-    "        self.zeta = 1.0\n",
-    "        self.ensemble = ensemble\n",
-    "    def init_canonical(self,phiA):\n",
-    "        self.phiA = phiA\n",
-    "        self.phiB = 1-phiA\n",
-    "    def init_grandcanonical(self,zA,zB):\n",
-    "        # these should be zA = \\rho0^{-1} exp(muA) and zB = \\rho0^{-1} exp(muB)\n",
-    "        self.phiA = zA\n",
-    "        self.phiB = zB\n",
-    "    def init_weakcompressible(self,zeta):\n",
-    "        self.zeta = zeta\n",
-    "    def dHdw_compressible(self,w):\n",
-    "        wplus = w[:,0]\n",
-    "        wminus = w[:,1]\n",
-    "        rhoA,rhoB = getw_rho(wplus,wminus,self.phiA,self.phiB,self.rho)\n",
-    "        dHdwplus = (rhoA+rhoB)-2/self.chi*wplus\n",
-    "        dHdwminus = (rhoB-rhoA)+2/self.chi*wminus\n",
-    "        return self.rho0*np.vstack((dHdwplus,-dHdwminus)).T\n",
-    "    def dHdw_weakcompressible(self,w):\n",
-    "        wplus = w[:,0]\n",
-    "        wminus = w[:,1]\n",
-    "        wplus = w[:,0]\n",
-    "        wminus = w[:,1]\n",
-    "        rhoA,rhoB = getw_rho(wplus,wminus,self.phiA,self.phiB,self.rho)\n",
-    "        dHdwplus = (rhoA+rhoB)-2/(self.chi+2*self.zeta)*(wplus-self.zeta)\n",
-    "        dHdwminus = (rhoB-rhoA)+2/self.chi*wminus\n",
-    "        return self.rho0*np.vstack((dHdwplus,-dHdwminus)).T\n",
-    "    def dHdw_incompressible(self,w):\n",
-    "        wplus = w[:,0]\n",
-    "        wminus = w[:,1]\n",
-    "        wplus = w[:,0]\n",
-    "        wminus = w[:,1]\n",
-    "        rhoA,rhoB = getw_rho(wplus,wminus,self.phiA,self.phiB,self.rho)\n",
-    "        dHdwplus = (rhoA+rhoB)-1\n",
-    "        dHdwminus = (rhoB-rhoA)+2/self.chi*wminus\n",
-    "        return self.rho0*np.vstack((dHdwplus,-dHdwminus)).T\n",
-    "    def wick(self,w):\n",
-    "        return np.vstack((np.zeros(len(w),dtype = complex)+1j,np.ones(len(w),dtype = complex))).T\n",
-    "    def g(self,w):\n",
-    "        if len(np.shape(w)) == 1:\n",
-    "            w = w.reshape((1,2))\n",
-    "        wplus = w[:,0]\n",
-    "        wminus = w[:,1]\n",
-    "        rhoA,rhoB = getw_rho(wplus,wminus,self.phiA,self.phiB,self.rho)\n",
-    "        g = self.rho0*(rhoA+rhoB-1)\n",
-    "        return g\n",
-    "    def dgdw(self,w):\n",
-    "        wplus = w[:,0]\n",
-    "        wminus = w[:,1]\n",
-    "        rhoA,rhoB = getw_rho(wplus,wminus,self.phiA,self.phiB,self.rho)\n",
-    "        if self.ensemble == 'grand':\n",
-    "            dgdwplus = -(rhoA+rhoB)\n",
-    "            dgdwminus = -(rhoB-rhoA)\n",
-    "            return self.rho0*np.vstack((dgdwplus,dgdwminus)).T\n",
-    "    def getDensity(self,w):\n",
-    "        return self.rho0*calc_density(w,self.rho,self.phiA,self.phiB)\n",
-    "    def getCorrelation(self,w):\n",
-    "        return self.rho0*calcDensity2(w,self.rho,self.phiA,self.phiB)\n",
-    "    def getCorrelation_list(self,wlist):\n",
-    "        return np.array([self.rho0*calcDensity2(w,self.rho,self.phiA,self.phiB) for w in wlist],dtype = complex)    \n",
-    "\n",
-    "    def dgldl(self,w,l):\n",
-    "        wplus = w[:,0]\n",
-    "        wminus = w[:,1]\n",
-    "        rhoA,rhoB = getw_rho(wplus,wminus,self.phiA,self.phiB,self.rho)\n",
-    "        rho_plus = rhoA+rhoB\n",
-    "        rho_minus = rhoB-rhoA\n",
-    "        wnew = w.copy()\n",
-    "        wnew[:,0] += l*self.dgdw(w)[:,0]\n",
-    "        wnew[:,1] += l*self.dgdw(w)[:,1]\n",
-    "\n",
-    "        if self.ensemble == 'grand':\n",
-    "            wplus_c = wnew[:,0]\n",
-    "            wminus_c = wnew[:,1]\n",
-    "            rhoA_adjust,rhoB_adjust = getw_rho(wplus_c,wminus_c,self.phiA,self.phiB,self.rho)\n",
-    "            dgdl = rhoA_adjust*(rho_plus-rho_minus)+rhoB_adjust*(rho_plus+rho_minus)\n",
-    "            dgdl *= self.rho0*0.25\n",
-    "            return dgdl\n",
-    "    def gl(self,w,l):\n",
-    "        wnew = w.copy()\n",
-    "        wnew[:,0] += l*self.dgdw(w)[:,0]\n",
-    "        wnew[:,1] += l*self.dgdw(w)[:,1]\n",
-    "        return self.rho0*self.g(wnew)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[207.62896563+9.59540039e-02j  57.92942826-1.40769715e-24j]]\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "1000.0\n",
-      "[99539.99456525+9580.68274967j] 1.0 100\n"
+      "[93.93077133-0.16315879j]\n",
+      "[5.34582364e+307+6.45361095e+307j]\n",
+      "[-inf+nanj]\n",
+      "nan\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/timothy/ProjectionToySDE/python_version/model_2point.py:7: RuntimeWarning: divide by zero encountered in divide\n",
+      "  update= (gl(w0,lag_mult))/dgldl(w0,lag_mult)\n",
+      "/home/timothy/ProjectionToySDE/python_version/model_2point.py:7: RuntimeWarning: invalid value encountered in divide\n",
+      "  update= (gl(w0,lag_mult))/dgldl(w0,lag_mult)\n",
+      "/home/timothy/ProjectionToySDE/python_version/model_2point.py:12: RuntimeWarning: invalid value encountered in divide\n",
+      "  update[loc] = update[loc]/np.abs(update[loc])*maxupdate\n"
      ]
     }
    ],
@@ -363,15 +54,15 @@
     "phiA= 0.5\n",
     "phiB = 1-phiA\n",
     "chi = 1.0\n",
-    "rho0 = 1.0\n",
+    "rho0 = 100.0\n",
     "nx = 1\n",
-    "zA = 1e5\n",
-    "zB = 1e5\n",
+    "zA = 1\n",
+    "zB = 1\n",
     "tmax = 1.0\n",
     "dt = 0.001\n",
     "tol = 1e-10\n",
-    "maxiter = 100\n",
-    "maxupdate = 1000\n",
+    "maxiter = 1000\n",
+    "maxupdate = 10\n",
     "np.random.seed(77)\n",
     "# Generate arrays of complex numbers\n",
     "wplus = np.random.normal(0, 1, nx) + 0j * np.random.normal(0, 1, nx)\n",
@@ -382,49 +73,24 @@
     "lambda_minus = 1.0\n",
     "_model = model(chi,rho0,ensemble='grand')\n",
     "_model.init_grandcanonical(zA,zB)\n",
-    "#model.dHw(w)\n",
     "\n",
     "model_list = [_model.dHdw_compressible,_model.dHdw_weakcompressible,_model.dHdw_incompressible]\n",
     "lambdat = np.array([lambda_plus,lambda_minus])\n",
     "wlist = []\n",
     "corrlist = []\n",
-    "sde = sde_int(w0,_model.dHdw_compressible,_model.wick)\n",
+    "sde = sde_int(w0,_model.dHdw_compressible,_model.wick,ensemble = 'grand')\n",
     "sde.initialize_project(_model.dgdw,_model.gl,_model.dgldl,tol,maxiter,maxupdate)\n",
-    "# w,t, = sde.Euler_Maruyama_Projected(dt,dt,lambdat,SCFT = False)\n",
-    "w,t, = sde.Euler_Maruyama(dt,dt,lambdat,SCFT = False)\n",
-    "# # print(_model.gl(w0,lag_mult))\n",
-    "# corrlist.append(_model.getCorrelation_list(w))\n",
-    "sol,error,iter = LSolver(w[-1],np.zeros(len(w0),dtype = complex),_model.gl,_model.dgldl,tol,maxiter,maxupdate,verbose = True)\n",
-    "w,t, = sde.Euler_Maruyama(dt,dt,lambdat,SCFT = False)\n",
-    "\n",
-    "w0 = w[-1]+sol*_model.dgdw(w[-1])\n",
-    "sde = sde_int(w0,_model.dHdw_compressible,_model.wick)\n",
-    "w,t, = sde.Euler_Maruyama(dt,dt,lambdat,SCFT = False)\n",
-    "sol,error,iter = LSolver(w[-1],np.zeros(len(w0),dtype = complex),_model.gl,_model.dgldl,tol,maxiter,maxupdate,verbose = True)\n",
-    "\n",
-    "w0 = w[-1]+sol*_model.dgdw(w[-1])\n",
-    "sde = sde_int(w0,_model.dHdw_compressible,_model.wick)\n",
-    "w,t, = sde.Euler_Maruyama(dt,dt,lambdat,SCFT = False)\n",
-    "print(w[-1])\n",
-    "_model.getDensity(w[-1])\n",
-    "sol,error,iter = LSolver(w[-1],np.zeros(len(w0),dtype = complex),_model.gl,_model.dgldl,tol,maxiter,maxupdate,verbose = True)\n",
-    "\n",
-    "\n",
-    "print(sol,error,iter)\n",
-    "# sde = sde_int(w0,_model.dHdw_compressible,_model.wick)\n",
-    "# w,t, = sde.Euler_Maruyama(tmax,dt,lambdat,SCFT = False)\n",
-    "# corrlist.append(_model.getCorrelation_list(w))\n",
-    "\n",
-    "\n",
-    "# # print(corrlist)\n",
-    "# sde = sde_int(w0,_model.dHdw_incompressible,_model.wick)\n",
-    "# w,t, = sde.Euler_Maruyama(tmax,dt,lambdat,SCFT = False)\n",
-    "# corrlist.append(_model.getCorrelation_list(w))\n"
+    "w,t, = sde.Euler_Maruyama_Projected(tmax,dt,lambdat,SCFT = False)\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +106,7 @@
        "Text(0, 0.5, '$\\\\det( \\\\left<\\\\delta\\\\rho_i \\\\delta\\\\rho_j\\\\right>-\\\\left<\\\\delta\\\\rho_i\\\\right> \\\\left< \\\\delta\\\\rho_j\\\\right>)$')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -488,7 +154,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
